fix: added media query to hide logo when screen is too small

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   justify-items: center;
   align-items: center;
-  grid-template-columns: [logo-start] 20% [logo-title] 80% [title-end];
+  grid-template-columns: [logo-start] 0 [logo-title] 100% [title-end];
 
   .left-column {
     display: flex;
@@ -21,5 +21,11 @@
     text-align: center;
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (min-width: 646px) {
+  .title-bar {
+    grid-template-columns: [logo-start] 20% [logo-title] 80% [title-end];
   }
 }
